# avb-verify

./: .gitmodules  CMakeLists.txt  Makefile  README.md  SECURITY.md  avb_sign.py  avb_sign_test.sh  avb_verify.c  avb_verify_test.sh  verify_avb.c  verify_avb_test.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
